add users and move auth
